--- a/mobile.css
+++ b/mobile.css
@@ -21,6 +21,7 @@ body {
     height: 100vh;
     background-color: white;
     font-family: "Outfit";
+    overflow-x: hidden;
 }
 
 header {
@@ -57,7 +58,7 @@ section li::marker {
 }
 
 .introducao h1 {
-    color: black;
+    color: hsl(24, 5%, 18%);
     font-family: "Young Serif";
     font-weight: normal;
     font-style: normal;
@@ -67,7 +68,7 @@ section li::marker {
 
 .introducao p {
     padding-bottom: 60px;
-    
+    color: hsl(30, 10%, 34%);
 }
 
 .introducao div {
@@ -88,7 +89,7 @@ section li::marker {
 }
 
 .introducao span {
-    
+    color: hsl(30, 10%, 34%);
 }
 
 .introducao strong {
@@ -102,7 +103,68 @@ section li::marker {
 
 .ingredients li {
     padding: 10px;
+    position: relative;
 }
+
+.ingredients span {
+    color: hsl(30, 10%, 34%);
+    position: absolute;
+    left: 40px;
+}
+
+.ingredients .po {
+    color: hsl(30, 10%, 34%);
+    position: absolute;
+    top: 10px;
+    left: 40px;
+}
+
+.instructions ol {
+    list-style-position: inside;
+    
+}
+
+.instructions li {
+    color: hsl(30, 10%, 34%);
+    padding-left: 5px;
+    padding-bottom: 10px;
+    
+}
+
+.instructions li::marker {
+    font-weight: bold;
+}
+
+.instructions span {
+    display: block;
+    padding-left: 40px;
+    position: relative;
+    bottom: 21px;
+}
+
+.nutrition p{
+    color: hsl(30, 10%, 34%);
+    padding-bottom: 20px;
+}
+
+.nutrition table {
+    width: 300px;
+    margin: auto;
+}
+
+.nutrition .nutrientes {
+    color: hsl(30, 10%, 34%);
+    padding: 10px;
+}
+
+.nutrition .calorias {
+    color: hsl(14, 45%, 36%);
+    font-weight: bold;
+}
+    
+
+
+
 
 
 
